--- a/app/sass/_fonts.sass
+++ b/app/sass/_fonts.sass
@@ -1,4 +1,9 @@
 @import "_mixins/font-face"
 
-+font-face("roboto-example", "../fonts/RobotoRegular/RobotoRegular")
-+font-face("roboto-example", "../fonts/RobotoBold/RobotoBold", bold)
++font-face("roboto", "../fonts/RobotoRegular/RobotoRegular")
++font-face("roboto", "../fonts/RobotoBold/RobotoBold", bold)
+
++font-face("montserrat-sans", "../fonts/MontserratRegular/MontserratRegular")
++font-face("montserrat-sans", "../fonts/MontserratBold/MontserratBold", bold)
++font-face("montserrat-sans", "../fonts/MontserratLight/", 300)
++font-face("montserrat-sans", "../fonts/MontserratSemibold/MontserratSemibold", 500)
