--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -1,6 +1,10 @@
-$default-font: "roboto-example", sans-serif
-$accent: orange
-$text: #333
+$default-font: "roboto", sans-serif
+$accent: #2395ED
+$text: #444
+$green: #0B9722
+$orange: #FF9B17
+
+
 
 // Customization Bootstrap vars from "app/libs/bootstrap/scss/_variables.scss"
 $grid-gutter-width: 30px
@@ -9,3 +13,6 @@ $grid-breakpoints: (xs: 0, sm: 576px, md: 768px, lg: 992px, xl: 1200px)
 $container-max-widths: (sm: 540px, md: 720px, lg: 960px, xl: 1140px)
 
 $gutter: $grid-gutter-width
+
+@function rem($pxsize, $rembase: 16)
+	@return ($pxsize/$rembase)+rem
