--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -38,6 +38,97 @@ body
 b, strong
 	font-weight: bold
 
+.btn
+	display: block
+	border-radius: 5px
+	height: rem(44)
+	width: 100%
+	border: none
+	font-size: rem(14)
+	font-weight: bold
+	color: #fff
+
+.btn-orange
+	background-color: $orange
+
+.btn-green
+	background-color: $green
+
+
+// Header Start
+
+header
+	.nav-sticky
+		display: flex
+		position: fixed
+		justify-content: center
+		width: 100%
+		background-color: #fff
+		box-shadow: 0 2px 4px 0 rgba(0,0,0,0.1)
+		z-index: 10000
+		.navbar-desctop
+			max-height: rem(60)
+			max-width: rem(1140)
+			width: 100%
+			justify-content: space-between
+			align-items: center
+			.header-logo
+				img
+					max-width: rem(154)
+			.header-nav
+				ul
+					list-style: none
+					display: flex
+					justify-content: center
+					// align-items: center
+					margin: 0
+					padding: 0
+					li
+						a
+							display: block
+							color: $text
+							font-size: rem(14)
+							line-height: rem(16)
+							font-weight: 500
+							padding: rem(5)
+							&:hover
+								text-decoration: none
+
+			.header-call
+				display: flex
+				justify-content: space-between
+				align-items: center
+				.btn
+					display: block
+					height: rem(35)
+					width: rem(154)
+					line-height: rem(35)
+					text-align: center
+					vertical-align: middle
+					color: #fff
+					margin-left: rem(-15)
+					&:hover
+						text-decoration: none
+					padding: 0 rem(11)
+				.header-phones
+					margin-right: rem(-15)
+					font-size: rem(14)
+					font-weight: 500
+					p
+						margin: 0
+	.header-wellcome
+		height: rem(2000)
+		.container
+			.row
+				.one
+					height: rem(2000)
+					background-color: green
+				.two
+					height: rem(2000)
+					background-color: red
+				.three
+					height: rem(2000)
+					background-color: blue
 
 
 @import "media" // Always at the end
