--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -1,8 +1,11 @@
 $default-font: "roboto", sans-serif
+$h-font: "montserrat-sans", sans-serif
 $accent: #2395ED
 $text: #444
 $green: #0B9722
 $orange: #FF9B17
+$red: #EE4034
+$grey: #9D9D9D
 
 
 
