--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -38,6 +38,11 @@ body
 b, strong
 	font-weight: bold
 
+ul
+	list-style: none
+	padding: 0
+	margin: 0
+
 .btn
 	display: block
 	border-radius: 5px
@@ -58,6 +63,12 @@ b, strong
 .h1
 	font-family: $h-font
 
+.h2
+	font-family: $h-font
+	font-size: rem(36)
+	font-weight: bold
+	line-height: rem(44)
+	width: 100%
 
 // Header Start
 
@@ -81,11 +92,8 @@ header
 					max-width: rem(154)
 			.header-nav
 				ul
-					list-style: none
 					display: flex
 					justify-content: center
-					margin: 0
-					padding: 0
 					li
 						a
 							display: block
@@ -165,8 +173,6 @@ header
 							line-height: rem(30)
 							font-weight: bold
 						ul
-							list-style: none
-							padding: 0
 							li
 								display: flex
 								margin-bottom: rem(25)
@@ -310,18 +316,18 @@ header
 						position: absolute
 						width: rem(255)
 						height: rem(255)
-						background: center/contain url(../img/video-plant/play.png) no-repeat
+						background: top url(../img/video-plant/play-1.png) no-repeat
 						top: 50%
 						left: 50%
 						transform: translate(-50%, -50%)
 						cursor: pointer
 						z-index: 50
+						&:hover
+							background: bottom url(../img/video-plant/play-1.png) no-repeat
 			.text
 				padding: rem(50) rem(40) rem(40) rem(20)
 				.h2
-					font-family: $h-font
-					font-size: rem(32)
-					font-weight: bold
+					font-size: rem(36)
 					line-height: rem(46)
 					margin-bottom: rem(20)
 				.cta
@@ -332,11 +338,277 @@ header
 
 // Video-plant End
 
+// Specification Start
+
+.spaec-details-box,
+.tips-box,
+.product-box
+	border: 4px solid $light-blue
+
 .specification
 	padding-top: rem(30)
+	padding-bottom: rem(50)
 	.container
 		.row
 			.h2
+				text-align: center
+				margin-bottom: rem(30)
+		.row
+			.spec-img
+				.tab-img
+					display: none
+					&.active
+						display: block
+			.spaec-details
+				.spaec-details-box
+					padding: rem(25)
+					.tabs
+						.title
+							font-family: $h-font
+							font-size: rem(24)
+							font-weight: bold
+							line-height: rem(29)
+						.tabs-container
+							display: flex
+							width: 100%
+							justify-content: space-between
+							margin-bottom: rem(30)
+							.tab
+								&.active
+									.tablink
+										background-color: rgba(0,0,0,0.1)
+								.tablink
+									display: block
+									font-size: rem(14)
+									font-weight: 500
+									height: rem(42)
+									width: rem(120)
+									line-height: rem(42)
+									border: 2px solid $accent
+									border-radius: 5px
+									background-color: #FFFFFF
+									color: #444
+									font-weight: bold
+									text-align: center
+									&:hover
+										text-decoration: none
+										background-color: rgba(0,0,0,0.1)
+					.title
+						font-family: $h-font
+						font-size: rem(18)
+						font-weight: bold
+						margin-bottom: rem(10)
+					ul
+						li
+							display: flex
+							width: 100%
+							justify-content: space-between
+							font-size: rem(14)
+							margin-bottom: rem(15)
+							align-items: flex-end
+							&:last-child
+								margin-bottom: 0
+							.label
+								flex: 0 0 auto
+								font-weight: bold
+							.separator
+								border-bottom: 1px dotted $text
+								width: 100%
+							.valey
+								flex: 0 0 auto
+							.tab-kg
+								display: none
+								&.active
+									display: block
+			.spaec-tips
+				display: flex
+				flex-direction: column
+				justify-content: space-between
+				.tips-box
+					padding: rem(25)
+					li
+						display: flex
+						margin-bottom: rem(15)
+						align-items: center
+						i
+							width: rem(52)
+							height: rem(52)
+							margin-right: rem(10)
+							flex: 0 0 auto
+							margin-right: rem(30)
+						p
+							margin: 0
+							font-family: $h-font
+							font-weight: bold
+							font-size: rem(18)
+					li:first-child
+						i
+							background: center/contain url(../img/specification/check.png) no-repeat
+					li:nth-child(2)
+						i
+							background: center/contain url(../img/specification/bolt.png) no-repeat
+					li:last-child
+						margin: 0
+						i
+							background: center/contain url(../img/specification/construction-and-tools.png) no-repeat
+				.product-box
+					padding: rem(20) rem(15)
+					.title
+						font-family: $h-font
+						font-size: rem(18)
+						font-weight: bold
+						margin-bottom: rem(10)
+						position: relative
+						&:after
+							content: "?"
+							font-size: rem(16)
+							color: $orange
+							position: absolute
+							width: rem(24)
+							height: rem(24)
+							line-height: rem(24)
+							text-align: center
+							vertical-align: middle
+							border: 1px solid $orange
+							border-radius: 100%
+							font-weight: 500
+							top: 0
+							right: 0
+					.tab-product
+						display: none
+						&.active
+							display: block
+						li
+							display: flex
+							width: 100%
+							justify-content: space-between
+							font-size: rem(14)
+							margin-bottom: rem(15)
+							align-items: flex-end
+							&:last-child
+								margin-bottom: 0
+							.label
+								flex: 0 0 auto
+								font-weight: bold
+							.separator
+								border-bottom: 1px dotted $text
+								width: 100%
+							.tab-speac
+								color: $green
+								flex: 0 0 auto
+			
+
+// Specification End
+
+// Akciya Start
+
+.akciya
+	patting-top: rem(60)
+	.container
+		.akciya-box
+			background-color: #FFFFFF
+			box-shadow: 0 0 rem(48) 0 rgba(0,0,0,0.2)
+			margin-bottom: rem(60)
+			border-radius: 9px
+			overflow: hidden
+			.h2
+				font-size: rem(24)
+				padding: rem(30)
+				padding-bottom: 0
+				margin-bottom: 0
+				line-height: initial
+			.akciya-present
+				display: flex
+				flex-direction: row
+				padding: rem(30)
+				width: 100%
+				.akciya-img
+					border: 1px solid #7BCCF0
+					border-radius: 5px
+					max-height: rem(182)
+					padding: rem(20)
+					margin-right: rem(30)
+					flex: 0 1 rem(255)
+					img
+						max-width: rem(120)
+						margin: 0 auto
+					.title
+						margin: 0
+						text-align: center
+						font-size: rem(18)
+						font-weight: bold
+				.akciya-timer
+					background: url(../img/akciya/timer-bg.png) no-repeat center/cover
+					flex: 1 0 auto
+					border-radius: 5px
+					padding: rem(10)
+					text-align: center
+					.timer-title
+						color: #FFFFFF
+						font-size: rem(18)
+						width: 100%
+						font-weight: bold
+						margin-bottom: rem(7)
+					.timer
+						display: flex
+						justify-content: center
+						width: 100%
+						color: #FFFFFF
+						.timer-points, .delimiter
+							font-size: rem(88)
+							font-weight: bold
+							line-height: rem(90)
+						.timer-points
+							min-width: rem(110)
+						.timer-text
+							font-size: rem(18)
+							line-height: initial
+
+			.akciya-form
+				display: flex
+				flex-direction: row
+				background-color: $orange
+				padding: rem(25) rem(30) rem(35)
+				input
+					height: rem(44)
+					border: 1px solid #FFFFFF
+					background-color: #FFFFFF
+					border-radius: 5px
+					color: $grey
+					padding: rem(14)
+					font-size: rem(14)
+					margin-right: rem(30)
+					width: 100%
+					max-width: rem(340)
+				.btn-orange
+					border: 3px solid #FFFFFF
+					&:hover
+						background-color: darken($orange, 10%)
+
+// Akciya End
+
+// Video-instructions Start
+
+.video-instructions
+	background-color: #EEFAFF
+	padding: rem(30)
+	.container
+		.row
+		 	.h2
+		 		text-align: center
+		 		margin-bottom: rem(30)
+		 	.row
+		 		.video-container
+		 			margin-bottom: rem(15)
+		 		.title
+		 			font-family: $h-font
+		 			font-size: rem(18)
+		 			font-weight: bold
+		 			line-height: rem(24)
+
+
+// Video-instructions End
+
 
 
 @import "media" // Always at the end
