--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -845,10 +845,77 @@ header
 								font-size: rem(18)
 								line-height: rem(22)
 
-
-
-
 // Catalog End
+
+// Book Start
+
+.book
+	background-color: #EEFAFF
+	padding-top: rem(60)
+	.container
+		.row
+			.book-form-box
+				padding-bottom: rem(105)
+				.h2
+					margin-bottom: rem(11)
+				.book-title
+					font-size: rem(24)
+					font-weight: 500
+					line-height: rem(28)
+					margin-bottom: rem(30)
+				.book-form
+					max-width: rem(360)
+					padding: rem(30) rem(20)
+					border-radius: 5px
+					background-color: #FFFFFF
+					box-shadow: 0 0 rem(48) 0 rgba(0,0,0,0.3)
+					.book-form-title
+						font-size: rem(18)
+						font-weight: bold
+						line-height: rem(26)
+						text-align: center
+						margin-bottom: rem(30)
+					.book-form-group
+						display: flex
+						flex-direction: column
+						margin-bottom: rem(10)
+						.b-form-item
+							width: 100%
+							margin-bottom: rem(20)
+							height: rem(44)
+							border: 1px solid $grey
+							color: $grey
+							border-radius: 5px
+							background-color: #FFFFFF
+							padding: rem(14)
+					.book-police
+						font-size: rem(12)
+						line-height: rem(17)
+						color: $light-grey
+			.book-book
+				display: flex
+				align-items: flex-end
+
+
+
+
+// Book End
+
+// Galery Start
+
+.gallery
+	.container
+		.row
+		.tab-content-g
+			.tab-gallery-box
+				display: none
+				&.active
+					display: block
+
+
+// Galery End
+
+
 
 
 
