--- a/app/sass/_libs.sass
+++ b/app/sass/_libs.sass
@@ -2,4 +2,5 @@
 @import "../libs/bootstrap/scss/bootstrap-grid.scss"
 @import "../libs/bootstrap/scss/utilities/_sizing.scss"
 @import "../libs/bootstrap/scss/_modal.scss"
+@import "../libs/bootstrap/scss/_carousel.scss"
 @import "../libs/bootstrap/scss/utilities/_embed.scss"
