--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -152,11 +152,10 @@ button:focus
 									display: block
 						.m-tab-box
 							display: flex
-							justify-content: space-between
 							.m-tab-link
 								border: 2px solid $accent
 								padding: rem(10)
-								// margin-right: rem(15)
+								margin-right: rem(15)
 					.m-text
 						.close
 							top: rem(-25)
@@ -182,11 +181,11 @@ button:focus
 							font-size: rem(14)
 							line-height: rem(20)
 							p
-								margin-bottom: rem(20)
+								margin-bottom: rem(15)
 						.m-buy-box
 							display: flex
 							align-items: center
-							margin-bottom: rem(40)
+							margin-bottom: rem(15)
 							.price-text
 								flex: 0 0 auto
 								color: #222222
@@ -200,8 +199,19 @@ button:focus
 								font-weight: bold
 								line-height: rem(47)
 								margin-right: rem(25)
-							.m-btn
-								max-width: rem(265)
+						.m-adds-form
+							display: flex
+							width: 100%
+							.form-item
+								width: 100%
+								height: rem(44)
+								border: 1px solid $grey
+								color: $grey
+								border-radius: 5px
+								background-color: #FFFFFF
+								padding: rem(14)
+								margin-bottom: rem(15)
+								margin-right: rem(10)
 						.m-share-box
 							display: flex
 							align-items: center
@@ -211,8 +221,6 @@ button:focus
 								margin-right: rem(15)
 							.m-share-link
 								max-width: rem(32)
-
-
 
 // Modal-add End
 
@@ -228,6 +236,7 @@ header
 		box-shadow: 0 2px 4px 0 rgba(0,0,0,0.1)
 		z-index: 10000
 		.navbar-desctop
+			display: none
 			max-height: rem(60)
 			max-width: rem(1140)
 			width: 100%
@@ -277,14 +286,17 @@ header
 					font-weight: 500
 					p
 						margin: 0
+		.navbar-mobile
+			height: rem(60)
 	.header-wellcome
 		background: url(../img/header/bg-1.png) 50% 50% no-repeat
-		padding-top: rem(90)
-		padding-bottom: rem(60)
+		padding-top: rem(80)
+		padding-bottom: rem(30)
 		.container
 			.row
 				.plus-box
-					.h1
+					.h1-desctop
+						display: none
 						font-size: rem(36)
 						line-height: rem(44)
 						width: rem(476)
@@ -307,21 +319,19 @@ header
 							right: rem(-15)
 					.utp-header
 						font-family: $h-font
-						font-size: rem(24)
-						line-height: rem(30)
-						font-weight: 500
-						margin-bottom: rem(28)
-						// height: 60px
-						// width: rem(500)
+						font-size: rem(18)
+						line-height: rem(24)
+						font-weight: bold
+						margin-bottom: rem(15)
 					.plus-block
 						.list-header
-							font-size: rem(24)
+							font-size: rem(18)
 							line-height: rem(30)
-							font-weight: bold
+							font-weight: 500
 						ul
 							li
 								display: flex
-								margin-bottom: rem(25)
+								margin-bottom: rem(15)
 								i
 									width: rem(24)
 									height: rem(24)
@@ -329,39 +339,62 @@ header
 									margin-right: rem(10)
 									flex: 0 0 auto
 								p
-									font-size: rem(18)
+									font-size: rem(14)
+									line-height: rem(18)
 									margin: 0
-									line-height: rem(24)
 								
 				.device-box
 					position: relative
 					.img-device
-						position: absolute
+						// position: absolute
 						bottom: 0
+						height: rem(475)
 						width: rem(177)
+						margin: 0 auto
 					.img-warranty
 						position: absolute
 						width: rem(73)
-						left: rem(-5)
-						top: rem(240)
+						left: rem(60)
+						top: rem(200)
 				.form-box
+					.h1-mobile
+						font-size: rem(18)
+						line-height: rem(24)
+						margin-bottom: rem(20)
+						position: relative
+						&:after
+							content: "новинка!"
+							display: block
+							position: absolute
+							height: rem(26)
+							width: rem(75)
+							border-radius: 5px
+							background-color: $red
+							color: #fff
+							font-size: rem(14)
+							line-height: rem(26)
+							font-weight: 500
+							text-align: center
+							top: 0
+							right: 0
 					.form-header
 						width: 100%
 						border-radius: 17px
 						background-color: #FFFFFF
 						box-shadow: 0 0 30px 0 rgba(0,0,0,0.3)
 						text-align: center
-						padding: rem(30)
+						padding: rem(20) rem(15)
+						margin-bottom: rem(20)
 						.cta
-							font-size: rem(24)
+							font-size: rem(18)
+							line-height: rem(24)
 							font-weight: bold
-							line-height: rem(32)
-							margin-bottom: rem(30)
+							margin-bottom: rem(15)
 							span
 								color: $green
 						.price
 							padding: 0
-							margin-bottom: rem(30)
+							margin-bottom: rem(15)
 							.price-item
 								display: flex
 								justify-content: center
@@ -420,7 +453,7 @@ header
 	.container
 		.row
 			justify-content: space-between
-			flex-wrap: nowrap
+			// flex-wrap: nowrap
 			.tips-container
 				display: flex
 				flex-direction: row
@@ -449,24 +482,6 @@ header
 					position: relative
 					.embed-responsive
 						border-radius: 15px
-					.plh-video
-						position: absolute
-						background: center/contain url(../img/video-plant/placeholder-video.jpg) no-repeat
-						top: 0
-						cursor: pointer
-						z-index: 10
-					.btn-video
-						position: absolute
-						width: rem(255)
-						height: rem(255)
-						background: top url(../img/video-plant/play-1.png) no-repeat
-						top: 50%
-						left: 50%
-						transform: translate(-50%, -50%)
-						cursor: pointer
-						z-index: 50
-						&:hover
-							background: bottom url(../img/video-plant/play-1.png) no-repeat
 			.text
 				padding: rem(50) rem(40) rem(40) rem(20)
 				.h2
@@ -1155,6 +1170,7 @@ header
 					.carousel-item
 						.row
 							.rev-video
+								flex: 0 0 auto
 								.rev-video-container
 									position: relative
 									.rev-video-caption
@@ -1179,6 +1195,26 @@ header
 									background: url(../img/review/review-1.jpg) no-repeat center center
 									background-size: cover
 									border-right: none
+								.rev-img-one
+									background: url(../img/review/review-1.jpg) no-repeat center center
+								.rev-img-two
+									background: url(../img/review/review-2.jpg) no-repeat center center
+								.rev-img-three
+									background: url(../img/review/review-3.jpg) no-repeat center center
+								.rev-img-four
+									background: url(../img/review/review-4.jpg) no-repeat center center
+								.rev-img-five
+									background: url(../img/review/review-5.jpg) no-repeat center center
+								.rev-img-six
+									background: url(../img/review/review-6.jpg) no-repeat center center
+								.rev-img-seven
+									background: url(../img/review/review-7.jpg) no-repeat center center
+								.rev-img-eight
+									background: url(../img/review/review-8.jpg) no-repeat center center
+								.rev-img-nine
+									background: url(../img/review/review-9.jpg) no-repeat center center
+								.rev-img-ten
+									background: url(../img/review/review-10.jpg) no-repeat center center
 								.rev-photo-caption
 									border-left: none
 									padding: rem(15) rem(20) rem(20)
@@ -1207,6 +1243,7 @@ header
 									.rev-text
 										font-size: rem(14)
 										line-height: rem(20)
+										width: 100%
 				.carousel-control
 					display: flex
 					justify-content: center
@@ -1441,7 +1478,37 @@ header
 					&:hover
 						background-color: darken(#FFFFFF, 10%)
 
-
 // Footer End
+
+// Support
+
+header
+	// display: none
+.tips
+	// display: none Доделать не равномерно
+.video-plant
+	// display: none
+.specification
+	// display: none
+.akciya
+	// display: none
+.video-instructions
+	// display: none
+.catalog
+	// display: none
+.book
+	// display: none
+.gallery
+	// display: none
+.review
+	// display: none
+.adds
+	// display: none
+.about
+	// display: none
+.faq
+	// display: none
+.footer
+	// display: none
 
 @import "media" // Always at the end
